--- a/public/css/style-course.css
+++ b/public/css/style-course.css
@@ -69,6 +69,7 @@
     top: 5px;
     left: -30px;
     text-align: center;
+    z-index: 2;
 }
 
 .tr-question-board{
@@ -83,6 +84,11 @@
     font-size: 16px;
 }
 
+.tr-course-question{
+    background-color: white;
+    border-radius: 20px;
+    margin: 0 10px;
+}
 .tr-course-question .row{
     margin: 10px 0;
 }
@@ -104,7 +110,23 @@
     margin: 30px 0;
 }
 
-.tr-course-material-disabled{
-    background-image: url('../dark-blur-blurred-gradient.jpg');
-    transition: background-image .2s ease-out;
+.tr-course-full-screen-message{
+    background-color: black;
+    opacity: 0.6;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    color: white;
+    z-index: 3;
 }
+
+.tr-course-material-shade{
+    background-image: url("../dark-blur-blurred-gradient.jpg");
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+}
+
