--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -6,7 +6,7 @@
         </span>
     <ul id="home-navbar" class="tr-large-device-content tr-navbar tr-vertical-center">
         <li>
-            <a href="">
+            <a href="#!/statistics">
                 Statistics
                 <div class="tr-navbar-item-underline">
                 </div>
@@ -25,7 +25,7 @@
              <a href="" class="glyphicon glyphicon-remove tr-navbar-closer tr-vertical-center"></a>
              <ul class="list-group tr-collapsed-navbar-menu">
                  <li class="list-group-item">
-                     <a href="">
+                     <a href="#!/statistics">
                          Statistics
                      </a>
                  </li>
