--- a/public/views/course/material/downloadable-file.html
+++ b/public/views/course/material/downloadable-file.html
@@ -1,5 +1,5 @@
 <div>
-    <a href="{{material.path}}">{{material.path}}</a>
+    <a href="{{material.path}}" ng-click="model.completeMaterial(material)">{{material.path}}</a>
 </div>
 Size: {{material.size}}<br>
 Type: {{material.fileType}}<br>
