--- a/public/views/course/material/link.html
+++ b/public/views/course/material/link.html
@@ -1,1 +1,1 @@
-<a href="{{material.url}}">{{material.url}}</a>
+<a href="{{material.url}}" ng-click="model.completeMaterial(material)">{{material.url}}</a>
