--- a/public/views/course/material/post.html
+++ b/public/views/course/material/post.html
@@ -1,3 +1,7 @@
 <p>
     {{material.content}}
 </p>
+
+<span class="pull-right tr-post-complete">
+    <a ng-click="model.completeMaterial(material)" href="">Finish Reading</a>
+</span>
