--- a/public/css/style-course.css
+++ b/public/css/style-course.css
@@ -5,7 +5,6 @@
 }
 
 #course-header{
-    background-image: url("../thom-schneider-108615.jpg");
     /*Photo by Thom Schneider on Unsplash*/
     height: 350px;
     background-position: center;
@@ -88,9 +87,10 @@
     background-color: white;
     border-radius: 20px;
     margin: 0 10px;
+    padding: 15px 5px;
 }
 .tr-course-question .row{
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 .tr-question-editor{
@@ -128,5 +128,14 @@
     left: 0;
     top: 0;
     display: none;
+}
+
+.tr-post-complete a{
+    display:inline-block;
+    background-color: red;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 5px 15px;
 }
 
