--- a/public/views/course/course.view.client.html
+++ b/public/views/course/course.view.client.html
@@ -1,9 +1,9 @@
 <ng-include src="'views/common/nav-header.html'"></ng-include>
 
 <section id="course-main-section">
-    <div id="course-header">
+    <div id="course-header" style="background-image: url({{model.course.icon}})">
         <span id="course-name" class="tr-center">
-            asdfads asdf eafe assdf ad e  asd
+            {{model.course.name}}
         </span>
     </div>
 
@@ -13,20 +13,27 @@
             <div id="course-desc">
                 <b>About this course:</b>
                 <p>
-                    dlskjfladskjflkaj
+                    {{model.course.description}}
                 </p>
             </div>
             <div id="course-creator">
                 <h4>Creators:</h4>
-                First Name Last Name
+                <span ng-repeat="creator in model.creators">
+                    {{creator.title}} {{creator.name}}
+                </span>
             </div>
             <div>
                 <b>Primary Topic:</b>
-                PT
+                {{model.course.primaryTopic}}
             </div>
-            <div>
+            <div ng-show="model.course.secondaryTopic">
                 <b>Secondary Topics:</b>
-                st, st
+                {{model.course.secondaryTopic}}
+            </div>
+
+            <div>
+                <b>Rating:</b>
+                <ng-rate-it ng-model="model.course.rating" read-only="true"></ng-rate-it>
             </div>
             <div id="course-info">
                 <div class="row">
@@ -34,7 +41,7 @@
                         <div class="tr-course-info-box">
                             <div class="tr-course-info-box-content">
                                 <div>Materials</div>
-                                <div><b>10</b></div>
+                                <div><b>{{model.courseMaterials.length}}</b></div>
                             </div>
                         </div>
                     </div>
@@ -42,7 +49,7 @@
                         <div class="tr-course-info-box">
                             <div class="tr-course-info-box-content">
                                 <div>Tuition</div>
-                                <div><b>$1000</b></div>
+                                <div><b>{{model.course.cost}}</b></div>
                             </div>
                         </div>
                     </div>
@@ -50,12 +57,27 @@
                         <div class="tr-course-info-box">
                             <div class="tr-course-info-box-content">
                                 <div>Creation Date</div>
-                                <div><b>12-04-17</b></div>
+                                <div><b>{{model.course.date}}</b></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <h2 ng-show="!model.user"><a>Log in</a> to enroll in this course</h2>
+            <div ng-show="!model.userStatus.isEnrolled">
+                <h2 ng-if="model.userStatus.isCreator">You're one of the faculty.</h2>
+                <h2 ng-if="!model.userStatus.isCreator"><a ng-click="model.enroll(model.user.id)">Enroll in this course</a></h2>
+            </div>
+            <h2 ng-show="model.userStatus.isEnrolled">
+                <span ng-if="lastCompleted < model.courseMaterials.length">
+                    You've enrolled in this course.
+                </span>
+                <span ng-if="lastCompleted == model.courseMaterials.length">
+                    You've completed this course.
+                </span>
+            </h2>
+
 
             <div id="course-material-list" >
                 <ul class="list-group">
@@ -102,19 +124,19 @@
             <div>
                 <h2 style="text-align: center"><i>The Question Board</i></h2>
                 <div class="tr-question-board">
-                    <div class="tr-course-question">
+                    <div ng-repeat="question in model.courseQuestions" class="tr-course-question">
                         <div class="row">
                             <div class="col-sm-4 hidden-xs tr-question-label">
                                 <b>
                                     Asked By: <br>
-                                    USer <br>
+                                    {{question.questioner}} <br>
                                 </b>
-                                1000 likes <br>
-                                <span class="glyphicon glyphicon-thumbs-up"></span> Like <br>
+                                {{question.likes}} likes <br>
+                                <!--<span class="glyphicon glyphicon-thumbs-up"></span> Like <br>-->
 
                             </div>
                             <div class="col-sm-8 col-xs-12">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                {{question.questionText}}
                             </div>
                         </div>
                         <div class="row">
@@ -127,59 +149,20 @@
 
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" ng-show="question.answer">
                             <div class="col-sm-4 hidden-xs tr-question-label">
                                 <b>
                                     Answered By: <br>
-                                    USer <br>
+                                    {{question.answerer}} <br>
                                 </b>
                             </div>
                             <div class="col-sm-8 col-xs-12">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    {{question.answer}}
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <hr>
-                    <div class="tr-course-question">
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Asked By: <br>
-                                    USer <br>
-                                </b>
-                                1000 likes <br>
-                                <span class="glyphicon glyphicon-thumbs-up"></span> Like <br>
-
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Related Material
-                                </b>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Answered By: <br>
-                                    USer <br>
-                                </b>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p>
-                            </div>
-                        </div>
+                        <hr>
                     </div>
                 </div>
 
@@ -191,7 +174,7 @@
 
 </section>
 
-<div class="tr-course-full-screen-message">
+<div class="tr-course-completion-message">
 123123211231231
 </div>
 
