added course listing page

--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -61,14 +61,14 @@
     <div id="home-button-group">
         <div class="tr-large-device-content">
             <a href="#!/register">Sign Up</a>
-            <a href="">Find a Course</a>
+            <a href="#!/search">Find a Course</a>
         </div>
         <div class="tr-small-device-content">
             <div>
                 <a href="#!/register">Sign Up</a>
             </div>
             <div>
-                <a href="">Find a Course</a>
+                <a href="#!/search">Find a Course</a>
             </div>
         </div>
     </div>
