--- a/public/views/course/course.view.client.html
+++ b/public/views/course/course.view.client.html
@@ -64,12 +64,10 @@
                 </div>
             </div>
 
-            <h2 ng-show="!model.user"><a>Log in</a> to enroll in this course</h2>
-            <div ng-show="!model.userStatus.isEnrolled">
-                <h2 ng-if="model.userStatus.isCreator">You're one of the faculty.</h2>
-                <h2 ng-if="!model.userStatus.isCreator"><a ng-click="model.enroll(model.user.id)">Enroll in this course</a></h2>
-            </div>
-            <h2 ng-show="model.userStatus.isEnrolled">
+            <h2 ng-if="!model.user"><a>Log in</a> to enroll in this course</h2>
+            <h2 ng-if="model.userStatus.isCreator">You're one of the faculty.</h2>
+            <h2 ng-if="model.user && !model.userStatus.isEnrolled"><a ng-click="model.enroll(model.user.id)">Enroll in this course</a></h2>
+            <h2 ng-if="model.userStatus.isEnrolled">
                 <span ng-if="lastCompleted < model.courseMaterials.length">
                     You've enrolled in this course.
                 </span>
@@ -78,94 +76,97 @@
                 </span>
             </h2>
 
+            <div ng-show="model.userStatus.isCreator || model.userStatus.isEnrolled">
+                <div id="course-material-list">
+                    <ul class="list-group">
+                        <li class="list-group-item"
+                            tr-course-material
+                            ng-repeat="material in model.courseMaterials">
 
-            <div id="course-material-list" >
-                <ul class="list-group">
-                    <li class="list-group-item"
-                        tr-course-material
-                        ng-repeat="material in model.courseMaterials">
-
-                        <div class="tr-course-material" >
-                            <div ng-switch="material.type">
-                                <div ng-switch-when="DownloadableFile">
-                                    <ng-include src="'views/course/material/downloadable-file.html'"></ng-include>
-                                </div>
-                                <div ng-switch-when="Link">
-                                    <div ng-if="!material.isVideo">
-                                        <ng-include src="'views/course/material/link.html'"></ng-include>
+                            <div class="tr-course-material" >
+                                <div ng-switch="material.type">
+                                    <div ng-switch-when="DownloadableFile">
+                                        <ng-include src="'views/course/material/downloadable-file.html'"></ng-include>
                                     </div>
-                                    <div ng-if="material.isVideo">
-                                        <ng-include src="'views/course/material/video.html'"></ng-include>
+                                    <div ng-switch-when="Link">
+                                        <div ng-if="!material.isVideo">
+                                            <ng-include src="'views/course/material/link.html'"></ng-include>
+                                        </div>
+                                        <div ng-if="material.isVideo">
+                                            <ng-include src="'views/course/material/video.html'"></ng-include>
+                                        </div>
                                     </div>
-                                </div>
-                                <div ng-switch-when="Post">
-                                    <ng-include src="'views/course/material/post.html'"></ng-include>
+                                    <div ng-switch-when="Post">
+                                        <ng-include src="'views/course/material/post.html'"></ng-include>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="tr-course-material-ordinal">
-                            <span class="tr-center">Material {{material.ordinal}}</span>
-                        </div>
+                            <div class="tr-course-material-ordinal">
+                                <span class="tr-center">{{material.name}}</span>
+                            </div>
 
-                        <div class="tr-course-material-shade"></div>
-                    </li>
+                            <div class="tr-course-material-shade"></div>
+                        </li>
 
-                    <!--<li class="list-group-item tr-course-material-disabled">-->
+                        <!--<li class="list-group-item tr-course-material-disabled">-->
                         <!--<div class="tr-course-material ">-->
 
                         <!--</div>-->
-                    <!--</li>-->
+                        <!--</li>-->
 
-                </ul>
-                <button ng-click="model.test()">test</button>
-            </div>
-
-            <div>
-                <h2 style="text-align: center"><i>The Question Board</i></h2>
-                <div class="tr-question-board">
-                    <div ng-repeat="question in model.courseQuestions" class="tr-course-question">
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Asked By: <br>
-                                    {{question.questioner}} <br>
-                                </b>
-                                {{question.likes}} likes <br>
-                                <!--<span class="glyphicon glyphicon-thumbs-up"></span> Like <br>-->
-
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                {{question.questionText}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Related Material
-                                </b>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-
-                            </div>
-                        </div>
-                        <div class="row" ng-show="question.answer">
-                            <div class="col-sm-4 hidden-xs tr-question-label">
-                                <b>
-                                    Answered By: <br>
-                                    {{question.answerer}} <br>
-                                </b>
-                            </div>
-                            <div class="col-sm-8 col-xs-12">
-                                <p>
-                                    {{question.answer}}
-                                </p>
-                            </div>
-                        </div>
-                        <hr>
-                    </div>
+                    </ul>
+                    <button ng-click="model.test()">test</button>
                 </div>
 
+                <div>
+                    <h2 style="text-align: center"><i>The Question Board</i></h2>
+                    <div class="tr-question-board">
+                        <div ng-repeat="question in model.courseQuestions" class="tr-course-question">
+                            <div class="row">
+                                <div class="col-sm-4 hidden-xs tr-question-label">
+                                    <b>
+                                        Asked By: <br>
+                                        {{question.questioner}} <br>
+                                    </b>
+                                    {{question.likes}} likes <br>
+                                    <!--<span class="glyphicon glyphicon-thumbs-up"></span> Like <br>-->
+
+                                </div>
+                                <div class="col-sm-8 col-xs-12">
+                                    {{question.questionText}}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 hidden-xs tr-question-label">
+                                    <b>
+                                        Related Material
+                                    </b>
+                                </div>
+                                <div class="col-sm-8 col-xs-12">
+                                    <span class="badge" ng-repeat="relMat in question.relatedMaterials">
+                                        {{relMat}}
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row" ng-show="question.answer">
+                                <div class="col-sm-4 hidden-xs tr-question-label">
+                                    <b>
+                                        Answered By: <br>
+                                        {{question.answerer}} <br>
+                                    </b>
+                                </div>
+                                <div class="col-sm-8 col-xs-12">
+                                    <p>
+                                        {{question.answer}}
+                                    </p>
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
         </div>
@@ -174,10 +175,13 @@
 
 </section>
 
-<div class="tr-course-completion-message">
-123123211231231
-</div>
-
-<div class="tr-course-full-screen-message">
-
+<div tr-course-completion-message>
+    <div class="tr-center tr-full-screen-message-content">
+        <h1>Congratulations!</h1>
+        <h3>You've completed the course. Now would you like to comment on this course?</h3>
+        <ng-rate-it ng-model="model.comment.rating" step="1"></ng-rate-it> <br>
+        <textarea class="form-control" rows="10" ng-model="model.comment.text"></textarea>
+        <a class="tr-comment-button" href="" >comment</a>
+        <a href=""><span class="glyphicon glyphicon-remove tr-completion-message-closer"></span></a>
+    </div>
 </div>
