--- a/public/views/user/register.view.html
+++ b/public/views/user/register.view.html
@@ -103,11 +103,13 @@
 
 
     <div class="form-group">
-        <label class="col-sm-2 control-label" for="profilePicture">Profile Picture</label>
+        <label class="col-sm-2 control-label">Profile Picture</label>
         <div class="col-sm-10">
             <!--<input type="file" class="form-control"-->
                    <!--id="profilePicture">-->
-            <input type="file" id="profilePicture" ng-model="model.profilePicture">
+            <!--<input type="file" id="profilePicture" ng-model="model.user.profilePicture">-->
+
+            <input type="file" fileread="vm.uploadme" />
 
         </div>
     </div>
@@ -123,7 +125,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a ng-click="model.register(model.user,model.profilePicture)" class="btn btn-primary form-control" role="button">Register</a>
+            <a ng-click="model.register(model.user)" class="btn btn-primary form-control" role="button">Register</a>
         </div>
     </div>
 
