--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -30,7 +30,7 @@
                      </a>
                  </li>
                  <li class="list-group-item">
-                     <a href="">
+                     <a href="#!/login">
                          Log In
                      </a>
                  </li>
