--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -12,9 +12,23 @@
                 </div>
             </a>
         </li>
-        <li>
+        <li ng-show="!model.user">
             <a href="#!/login">
                 Log In
+                <div class="tr-navbar-item-underline">
+                </div>
+            </a>
+        </li>
+        <li ng-show="model.user">
+            <a href="#!/user">
+                My Profile
+                <div class="tr-navbar-item-underline">
+                </div>
+            </a>
+        </li>
+        <li ng-show="model.user">
+            <a href="" ng-click="model.logout()">
+                Log Out
                 <div class="tr-navbar-item-underline">
                 </div>
             </a>
@@ -29,9 +43,19 @@
                          Statistics
                      </a>
                  </li>
-                 <li class="list-group-item">
+                 <li class="list-group-item" ng-show="!model.user">
                      <a href="#!/login">
                          Log In
+                     </a>
+                 </li>
+                 <li class="list-group-item" ng-show="model.user">
+                     <a href="#!/user">
+                         My Profile
+                     </a>
+                 </li>
+                 <li class="list-group-item" ng-show="model.user">
+                     <a href="" ng-click="model.logout()">
+                         Log Out
                      </a>
                  </li>
              </ul>
