--- a/public/views/course/course.view.client.html
+++ b/public/views/course/course.view.client.html
@@ -100,6 +100,10 @@
                                         <ng-include src="'views/course/material/post.html'"></ng-include>
                                     </div>
                                 </div>
+
+                                <span class="pull-right tr-post-complete">
+                                    <a ng-click="model.completeMaterial(material)" href="">Finish</a>
+                                </span>
                             </div>
 
                             <div class="tr-course-material-ordinal">
