--- a/public/views/user/register.view.html
+++ b/public/views/user/register.view.html
@@ -131,7 +131,7 @@
 <!--</body>-->
 <!--</html>-->
 
-<div tr-full-screen>
+<div>
     <div class="tr-register-tab tr-center">
         <div class="tr-login-header">
             Sign up for an account
@@ -144,28 +144,28 @@
             <div class="form-group">
                 <label for="inputEmail" class="col-sm-2 control-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="model.user.username" />
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="model.user.username" required />
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="inputPassword" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="model.user.password" />
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="model.user.password" required />
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="firstName" class="col-sm-2 control-label">First Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="firstName" placeholder="First Name" ng-model="model.user.firstName" />
+                    <input type="text" class="form-control" id="firstName" placeholder="First Name" ng-model="model.user.firstName" required />
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="lastName" class="col-sm-2 control-label">Last Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="model.user.lastName" />
+                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="model.user.lastName" required />
                 </div>
             </div>
 
@@ -220,6 +220,19 @@
                     <div class="col-sm-10">
                         <input type="url" class="form-control" id="work-website" placeholder="Work Website" ng-model="model.user.workWebsite">
                     </div>
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Profile Picture</label>
+                <div class="col-sm-10">
+                    <!--<input type="file" class="form-control"-->
+                    <!--id="profilePicture">-->
+                    <!--<input type="file" id="profilePicture" ng-model="model.user.profilePicture">-->
+
+                    <input type="file" fileread="vm.uploadme" />
+
                 </div>
             </div>
 
