--- a/public/views/user/register.view.html
+++ b/public/views/user/register.view.html
@@ -132,7 +132,7 @@
 <!--</html>-->
 
 <div>
-    <div class="tr-register-tab tr-center">
+    <div class="tr-register-tab tr-horizontal-center">
         <div class="tr-login-header">
             Sign up for an account
         </div>
@@ -222,6 +222,38 @@
                     </div>
                 </div>
 
+            </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label" for="phone1">Phone 1</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Phone 1"
+            id="phone1" ng-model="model.user.phone1" >
+            </div>
+            </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label" for="phone2">Phone 2</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Phone 2"
+            id="phone2" ng-model="model.user.phone2" >
+            </div>
+            </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label" for="phone3">Phone 3</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Phone 3"
+            id="phone3" ng-model="model.user.phone3" >
+            </div>
+            </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label" for="city">Phone 4</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Phone 4"
+            id="phone4" ng-model="model.user.phone4" >
+            </div>
             </div>
 
             <div class="form-group">
